--- a/index.html
+++ b/index.html
@@ -362,84 +362,108 @@
                 </div>
             
                 <div class="container-content">
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_1.jpg?v=224" alt="" class="container-content-imageChange-second">
-                        <div class="container-content-item">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH NIKE</ul>
-                        </div>
-                    </div>
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_2.jpg?v=224" alt="" class="container-content-imageChange-second">
-                        <div class="container-content-item">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH ADIDAS</ul>
-                        </div>
-                    </div>
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_3.jpg?v=224" alt="" class="container-content-imageChange-second">
+                    <a class="remove_underline" href="artificial.html">
                         <div class="container-content-list">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH PUMA</ul>
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_1.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-item">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH NIKE</ul>
+                            </div>
                         </div>
-                    </div>
+                    </a>
+                    <a class="remove_underline" href="nature.html">
+                        <div class="container-content-list">
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_2.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-item">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH ADIDAS</ul>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="remove_underline" href="futsal.html">
+                        <div class="container-content-list">
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_3.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-list">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH PUMA</ul>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="container-content">
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_4.jpg?v=224" alt="" class="container-content-imageChange-second">
-                        <div class="container-content-item">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH MIZUNO</ul>
-                        </div>
-                    </div>
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_5.jpg?v=224" alt="" class="container-content-imageChange-second">
-                        <div class="container-content-item">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH ASICS</ul>
-                        </div>
-                    </div>
-                    <div class="container-content-list">
-                    <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_6.jpg?v=224" alt="" class="container-content-imageChange-second">
+                    <a class="remove_underline" href="nature.html">
                         <div class="container-content-list">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH KAMITO</ul>
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_4.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-item">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH MIZUNO</ul>
+                            </div>
                         </div>
-                    </div>
+                    </a>        
+                    <a class="remove_underline" href="sale-off.html">
+                        <div class="container-content-list">
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_5.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-item">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH ASICS</ul>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="remove_underline" href="artificial.html">
+                        <div class="container-content-list">
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_6.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-list">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH KAMITO</ul>
+                            </div>
+                        </div>
+                    </a>  
                 </div>
                 <div class="container-content">
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_7.jpg?v=224" alt="" class="container-content-imageChange-second">
-                        <div class="container-content-item">
-                            <ul class="container-content-list-">GIÀY ĐÁ BANH GRANDSPORT</ul>
-                        </div>
-                    </div>
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_8.jpg?v=224" alt="" class="container-content-imageChange-second">
-                        <div class="container-content-item">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH X MUNICH</ul>
-                        </div>
-                    </div>
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_9.jpg?v=224" alt="" class="container-content-imageChange-second">
+                    <a class="remove_underline" href="sale-off.html">
                         <div class="container-content-list">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH JOMA</ul>
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_7.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-item">
+                                <ul class="container-content-list-">GIÀY ĐÁ BANH GRANDSPORT</ul>
+                            </div>
                         </div>
-                    </div>
+                    </a>    
+                    <a class="remove_underline" href="nature.html">
+                        <div class="container-content-list">
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_8.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-item">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH X MUNICH</ul>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="remove_underline" href="artificial.html">
+                        <div class="container-content-list">
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_9.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-list">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH JOMA</ul>
+                            </div>
+                        </div>
+                    </a>               
                 </div>
                 <div class="container-content">
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_10.jpg?v=224" alt="" class="container-content-imageChange-second">
-                        <div class="container-content-item">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH DESPORTE</ul>
-                        </div>
-                    </div>
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_11.jpg?v=224" alt="" class="container-content-imageChange-second">
-                        <div class="container-content-item">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH ZOCKER</ul>
-                        </div>
-                    </div>
-                    <div class="container-content-list">
-                        <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_12.jpg?v=224" alt="" class="container-content-imageChange-second">
+                    <a class="remove_underline" href="futsal.html">
                         <div class="container-content-list">
-                            <ul class="container-content-item-third">GIÀY ĐÁ BANH PAN</ul>
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_10.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-item">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH DESPORTE</ul>
+                            </div>
                         </div>
-                    </div>
+                    </a>                
+                    <a class="remove_underline" href="nature.html">
+                        <div class="container-content-list">
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_11.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-item">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH ZOCKER</ul>
+                            </div>
+                        </div>
+                    </a>                   
+                    <a class="remove_underline" href="sale-off.html">
+                        <div class="container-content-list">
+                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/brand_banner_12.jpg?v=224" alt="" class="container-content-imageChange-second">
+                            <div class="container-content-list">
+                                <ul class="container-content-item-third">GIÀY ĐÁ BANH PAN</ul>
+                            </div>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="container-title">
