--- a/zalo.html
+++ b/zalo.html
@@ -51,7 +51,7 @@
                 <div class="main__info">
                     <div class="main__profile-name">
                         <span class="main__avatar">
-                            <img src="https://scontent.fvca1-4.fna.fbcdn.net/v/t1.15752-9/363081910_288830190467804_670027009099413069_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=ae9488&_nc_ohc=qzXXL30GNygAX9OmHf-&_nc_ht=scontent.fvca1-4.fna&oh=03_AdSDtYiJx-FC5oS40xZ-jhIi93_Kd5FA90XLJ3Ax8xDLrA&oe=64E85C79" alt="Avatar">
+                            <img src="./assets/img/index/Me.jpg" alt="Avatar">
                         </span>
                     <div>
                         <h1 class="main__name">DT SPORT
@@ -99,7 +99,7 @@
             </div>
             <figure class="main__qr-block">
                 <div class="main__qr">
-                    <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/363047588_489521850057383_1576859809146805774_n.jpg?stp=dst-jpg_p206x206&_nc_cat=111&ccb=1-7&_nc_sid=aee45a&_nc_ohc=hLsUfE-hIMUAX8b8M6e&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSFU-LL8eldiWeIb3X6n0Tc-w1jMl5SwWAFzjeGyuPmeQ&oe=64E872E8" alt="QR-Code">
+                    <img src="./assets/img/index/ma-QA.jpg" alt="QR-Code">
                 </div>
                 <figcaption class="main__help-text">Mở Zalo, bấm quét QR để quét và xem trên điện thoại</figcaption>
             </figure>
