--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 <div class="container-content">
                     <a class="remove_underline" href="defender.html">
                         <div class="container-content-list">
-                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/position_banner_1.jpg?v=224" alt="" class="container-content-imageChange-first">
+                            <img src="./assets/img/index/position_banner_1.webp" alt="" class="container-content-imageChange-first">
                             <div class="container-content-item">
                                 <ul class="container-content-item-first">HẬU VỆ</ul>
                                 <ul class="container-content-item-second">PHÒNG NGỰ, CHẮC CHẮN</ul>
@@ -484,7 +484,7 @@
                     </a>
                     <a class="remove_underline" href="central-midfielder.html">
                         <div class="container-content-list">
-                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/position_banner_2.jpg?v=224" alt="" class="container-content-imageChange-first">
+                            <img src="./assets/img/index/position_banner_2.webp" alt="" class="container-content-imageChange-first">
                             <div class="container-content-item">
                                 <ul class="container-content-item-first">TIỀN VIỆN TRUNG TÂM</ul>
                                 <ul class="container-content-item-second">KIẾM SOÁT, CHUYỀN BÓNG</ul>
@@ -493,7 +493,7 @@
                     </a>
                     <a class="remove_underline" href="winger.html">
                         <div class="container-content-list">
-                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/position_banner_3.jpg?v=224" alt="" class="container-content-imageChange-first">
+                            <img src="./assets/img/index/position_banner_3.jpg" alt="" class="container-content-imageChange-first">
                             <div class="container-content-list">
                                 <ul class="container-content-item-first">TIỀN VỆ CÁNH</ul>
                                 <ul class="container-content-item-second">TỐC ĐỘ, ĐỘT PHÁ</ul>
@@ -502,7 +502,7 @@
                     </a>
                     <a class="remove_underline" href="striker.html">
                         <div class="container-content-list">
-                            <img src="https://theme.hstatic.net/1000061481/1001035882/14/position_banner_4.jpg?v=224" alt=""  class="container-content-imageChange-first">
+                            <img src="./assets/img/index/position_banner_4.webp" alt=""  class="container-content-imageChange-first">
                              <div class="container-content-list">
                                  <ul class="container-content-item-first">TIỀN ĐẠO</ul>
                                  <ul class="container-content-item-second">ĐỨT ĐIỂM, CHÍNH XÁC</ul>
